--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@octokit/rest": "^16.0.1",
+    "bunyan": "^1.8.12",
     "dotenv": "^6.1.0",
     "jsonwebtoken": "^8.4.0"
   },
