--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   "dependencies": {
     "@octokit/rest": "^16.0.1",
     "bunyan": "^1.8.12",
+    "bunyan-format": "^0.2.1",
     "dotenv": "^6.1.0",
-    "jsonwebtoken": "^8.4.0"
+    "jsonwebtoken": "^8.4.0",
+    "supports-color": "^5.5.0"
   },
   "devDependencies": {
     "eslint": "^5.5.0",
